Better title for searchresults page

--- a/content/en/searchresults/index.html
+++ b/content/en/searchresults/index.html
@@ -1,5 +1,5 @@
 +++
-title = "Rhino - Search Results"
+title = "Rhino Developer - Search Results"
 description = ""
 short_description = ""
 [admin] 
