--- a/content/en/searchresults/index.html
+++ b/content/en/searchresults/index.html
@@ -15,31 +15,36 @@ short_description = ""
   gallery_cards = false
 +++
 
-<html><head><link rel='stylesheet' href='/en/0/styles/hugo_skin.css' type='text/css' media='all'></head><body><div class='proxy-skin skin-static'>
-<div id="page_content">
-<!-- #BeginEditable "content" -->
-<!--<div id="search-result-title"><h1 >Search Results</h1></div>-->
-<script type="text/javascript">
-var customConfigId = '860f4b14-5b48-4f9d-914c-39cac1dff039';
-var javasriptResourceUrl = 'https://ui.customsearch.ai/api/ux/rendering-js?customConfig=860f4b14-5b48-4f9d-914c-39cac1dff039&market=en-US&version=latest&q=';
-var s = document.createElement('script');
-s.setAttribute('type', 'text/javascript');
-s.id = 'bcs_js_snippet';
-s.src = javasriptResourceUrl;
-var scripts = document.getElementsByTagName("script"),
-currentScript = scripts[scripts.length-1];
-currentScript.parentElement.appendChild(s);
+<html><head><link rel='stylesheet' href='/en/0/styles/hugo_skin.css' type='text/css' media='all'></head>
+<body>
+  <div class='proxy-skin skin-static'>
+    <div id="page_content">
+      <script async src="https://cse.google.com/cse.js?cx=46d5fe689c305459a">
+      </script>
+      <div class="gcse-search"></div>
+    </div>
+  </div>
+</body>
+<script>
+// Get the current URL
+var url = window.location.href;
+
+// Create a new URL object
+var urlObj = new URL(url);
+
+// Extract the 'q' parameter
+var qParam = urlObj.searchParams.get("q");
+
+// If 'q' parameter exists
+if (qParam) {
+    // Remove the 'q' parameter from the URL
+    urlObj.searchParams.delete("q");
+
+    // Add the 'q' parameter as a hash
+    urlObj.hash = "gsc.q=" + qParam;
+
+    // Redirect to the new URL
+    window.location.href = urlObj.href;
+}  
 </script>
-<!-- #EndEditable --></div>
-</div><script type="text/javascript">
-var customConfigId = '860f4b14-5b48-4f9d-914c-39cac1dff039';
-var javasriptResourceUrl = 'https://ui.customsearch.ai/api/ux/rendering-js?customConfig=860f4b14-5b48-4f9d-914c-39cac1dff039&market=en-US&version=latest&q=';
-var s = document.createElement('script');
-s.setAttribute('type', 'text/javascript');
-s.id = 'bcs_js_snippet';
-s.src = javasriptResourceUrl;
-var scripts = document.getElementsByTagName("script"),
-currentScript = scripts[scripts.length-1];
-currentScript.parentElement.appendChild(s);
-</script>
-</body></html>
+</html>
